src/deps/imgui/ext/implot/c.zig

pub extern fn ImPlot_PlotHistogram2D_S64Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImS64, ys: [*c]const imgui.ImS64, count: c_int, x_bins: c_int, y_bins: c_int, density: bool, range: ImPlotLimits, outliers: bool) f64;
pub extern fn ImPlot_PlotHistogram2D_U64Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImU64, ys: [*c]const imgui.ImU64, count: c_int, x_bins: c_int, y_bins: c_int, density: bool, range: ImPlotLimits, outliers: bool) f64;
pub extern fn ImPlot_PlotDigital_FloatPtr(label_id: [*c]const u8, xs: [*c]const f32, ys: [*c]const f32, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_doublePtr(label_id: [*c]const u8, xs: [*c]const f64, ys: [*c]const f64, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_S8Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImS8, ys: [*c]const imgui.ImS8, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_U8Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImU8, ys: [*c]const imgui.ImU8, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_S16Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImS16, ys: [*c]const imgui.ImS16, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_U16Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImU16, ys: [*c]const imgui.ImU16, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_S32Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImS32, ys: [*c]const imgui.ImS32, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_U32Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImU32, ys: [*c]const imgui.ImU32, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_S64Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImS64, ys: [*c]const imgui.ImS64, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotDigital_U64Ptr(label_id: [*c]const u8, xs: [*c]const imgui.ImU64, ys: [*c]const imgui.ImU64, count: c_int, offset: c_int, stride: c_int) void;
pub extern fn ImPlot_PlotImage(label_id: [*c]const u8, user_texture_id: imgui.ImTextureID, bounds_min: ImPlotPoint, bounds_max: ImPlotPoint, uv0: imgui.ImVec2, uv1: imgui.ImVec2, tint_col: imgui.ImVec4) void;
pub extern fn ImPlot_PlotText(text: [*c]const u8, x: f64, y: f64, vertical: bool, pix_offset: imgui.ImVec2) void;
pub extern fn ImPlot_PlotDummy(label_id: [*c]const u8) void;
pub extern fn ImPlot_SetNextPlotLimits(xmin: f64, xmax: f64, ymin: f64, ymax: f64, cond: imgui.ImGuiCond) void;
pub extern fn ImPlot_SetNextPlotLimitsX(xmin: f64, xmax: f64, cond: imgui.ImGuiCond) void;
pub extern fn ImPlot_SetNextPlotLimitsY(ymin: f64, ymax: f64, cond: imgui.ImGuiCond, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_LinkNextPlotLimits(xmin: [*c]f64, xmax: [*c]f64, ymin: [*c]f64, ymax: [*c]f64, ymin2: [*c]f64, ymax2: [*c]f64, ymin3: [*c]f64, ymax3: [*c]f64) void;
pub extern fn ImPlot_FitNextPlotAxes(x: bool, y: bool, y2: bool, y3: bool) void;
pub extern fn ImPlot_SetNextPlotTicksX_doublePtr(values: [*c]const f64, n_ticks: c_int, labels: [*c]const [*c]const u8, keep_default: bool) void;
pub extern fn ImPlot_SetNextPlotTicksX_double(x_min: f64, x_max: f64, n_ticks: c_int, labels: [*c]const [*c]const u8, keep_default: bool) void;
pub extern fn ImPlot_SetNextPlotTicksY_doublePtr(values: [*c]const f64, n_ticks: c_int, labels: [*c]const [*c]const u8, keep_default: bool, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_SetNextPlotTicksY_double(y_min: f64, y_max: f64, n_ticks: c_int, labels: [*c]const [*c]const u8, keep_default: bool, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_SetNextPlotFormatX(fmt: [*c]const u8) void;
pub extern fn ImPlot_SetNextPlotFormatY(fmt: [*c]const u8, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_SetPlotYAxis(y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_HideNextItem(hidden: bool, cond: imgui.ImGuiCond) void;
pub extern fn ImPlot_PixelsToPlot_Vec2(pOut: [*c]ImPlotPoint, pix: imgui.ImVec2, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_PixelsToPlot_Float(pOut: [*c]ImPlotPoint, x: f32, y: f32, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_PlotToPixels_PlotPoInt(pOut: [*c]imgui.ImVec2, plt: ImPlotPoint, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_PlotToPixels_double(pOut: [*c]imgui.ImVec2, x: f64, y: f64, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_GetPlotPos(pOut: [*c]imgui.ImVec2) void;
pub extern fn ImPlot_GetPlotSize(pOut: [*c]imgui.ImVec2) void;
pub extern fn ImPlot_IsPlotHovered() bool;
pub extern fn ImPlot_IsPlotXAxisHovered() bool;
pub extern fn ImPlot_IsPlotYAxisHovered(y_axis: ImPlotYAxis) bool;
pub extern fn ImPlot_GetPlotMousePos(pOut: [*c]ImPlotPoint, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_GetPlotLimits(pOut: [*c]ImPlotLimits, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_IsPlotSelected() bool;
pub extern fn ImPlot_GetPlotSelection(pOut: [*c]ImPlotLimits, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_IsPlotQueried() bool;
pub extern fn ImPlot_GetPlotQuery(pOut: [*c]ImPlotLimits, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_SetPlotQuery(query: ImPlotLimits, y_axis: ImPlotYAxis) void;
pub extern fn ImPlot_IsSubplotsHovered() bool;
pub extern fn ImPlot_BeginAlignedPlots(group_id: [*c]const u8, orientation: ImPlotOrientation) bool;
pub extern fn ImPlot_EndAlignedPlots() void;
pub extern fn ImPlot_Annotate_Str(x: f64, y: f64, pix_offset: imgui.ImVec2, fmt: [*c]const u8, ...) void;
pub extern fn ImPlot_Annotate_Vec4(x: f64, y: f64, pix_offset: imgui.ImVec2, color: imgui.ImVec4, fmt: [*c]const u8, ...) void;
pub extern fn ImPlot_AnnotateClamped_Str(x: f64, y: f64, pix_offset: imgui.ImVec2, fmt: [*c]const u8, ...) void;
pub extern fn ImPlot_AnnotateClamped_Vec4(x: f64, y: f64, pix_offset: imgui.ImVec2, color: imgui.ImVec4, fmt: [*c]const u8, ...) void;
pub extern fn ImPlot_DragLineX(id: [*c]const u8, x_value: [*c]f64, show_label: bool, col: imgui.ImVec4, thickness: f32) bool;
pub extern fn ImPlot_DragLineY(id: [*c]const u8, y_value: [*c]f64, show_label: bool, col: imgui.ImVec4, thickness: f32) bool;
pub extern fn ImPlot_DragPoint(id: [*c]const u8, x: [*c]f64, y: [*c]f64, show_label: bool, col: imgui.ImVec4, radius: f32) bool;
pub extern fn ImPlot_SetLegendLocation(location: ImPlotLocation, orientation: ImPlotOrientation, outside: bool) void;
pub extern fn ImPlot_SetMousePosLocation(location: ImPlotLocation) void;
pub extern fn ImPlot_IsLegendEntryHovered(label_id: [*c]const u8) bool;
pub extern fn ImPlot_BeginLegendPopup(label_id: [*c]const u8, mouse_button: imgui.ImGuiMouseButton) bool;
pub extern fn ImPlot_EndLegendPopup() void;
pub extern fn ImPlot_BeginDragDropTarget() bool;
pub extern fn ImPlot_BeginDragDropTargetX() bool;
pub extern fn ImPlot_BeginDragDropTargetY(axis: ImPlotYAxis) bool;
pub extern fn ImPlot_BeginDragDropTargetLegend() bool;
pub extern fn ImPlot_EndDragDropTarget() void;
pub extern fn ImPlot_BeginDragDropSource(key_mods: imgui.ImGuiKeyModFlags, flags: imgui.ImGuiDragDropFlags) bool;
pub extern fn ImPlot_BeginDragDropSourceX(key_mods: imgui.ImGuiKeyModFlags, flags: imgui.ImGuiDragDropFlags) bool;
pub extern fn ImPlot_BeginDragDropSourceY(axis: ImPlotYAxis, key_mods: imgui.ImGuiKeyModFlags, flags: imgui.ImGuiDragDropFlags) bool;
pub extern fn ImPlot_BeginDragDropSourceItem(label_id: [*c]const u8, flags: imgui.ImGuiDragDropFlags) bool;
pub extern fn ImPlot_EndDragDropSource() void;
pub extern fn ImPlot_GetStyle() [*c]ImPlotStyle;
pub extern fn ImPlot_StyleColorsAuto(dst: [*c]ImPlotStyle) void;
pub extern fn ImPlot_StyleColorsClassic(dst: [*c]ImPlotStyle) void;
pub extern fn ImPlot_StyleColorsDark(dst: [*c]ImPlotStyle) void;
pub extern fn ImPlot_StyleColorsLight(dst: [*c]ImPlotStyle) void;
pub extern fn ImPlot_PushStyleColor_U32(idx: ImPlotCol, col: imgui.ImU32) void;
pub extern fn ImPlot_PushStyleColor_Vec4(idx: ImPlotCol, col: imgui.ImVec4) void;
pub extern fn ImPlot_PopStyleColor(count: c_int) void;
pub extern fn ImPlot_PushStyleVar_Float(idx: ImPlotStyleVar, val: f32) void;
pub extern fn ImPlot_PushStyleVar_Int(idx: ImPlotStyleVar, val: c_int) void;
pub extern fn ImPlot_PushStyleVar_Vec2(idx: ImPlotStyleVar, val: imgui.ImVec2) void;
pub extern fn ImPlot_PopStyleVar(count: c_int) void;
pub extern fn ImPlot_SetNextLineStyle(col: imgui.ImVec4, weight: f32) void;
pub extern fn ImPlot_SetNextFillStyle(col: imgui.ImVec4, alpha_mod: f32) void;
pub extern fn ImPlot_SetNextMarkerStyle(marker: ImPlotMarker, size: f32, fill: imgui.ImVec4, weight: f32, outline: imgui.ImVec4) void;
pub extern fn ImPlot_SetNextErrorBarStyle(col: imgui.ImVec4, size: f32, weight: f32) void;
pub extern fn ImPlot_GetLastItemColor(pOut: [*c]imgui.ImVec4) void;
pub extern fn ImPlot_GetStyleColorName(idx: ImPlotCol) [*c]const u8;
pub extern fn ImPlot_GetMarkerName(idx: ImPlotMarker) [*c]const u8;
pub extern fn ImPlot_AddColormap_Vec4Ptr(name: [*c]const u8, cols: [*c]const imgui.ImVec4, size: c_int, qual: bool) ImPlotColormap;
pub extern fn ImPlot_AddColormap_U32Ptr(name: [*c]const u8, cols: [*c]const imgui.ImU32, size: c_int, qual: bool) ImPlotColormap;
pub extern fn ImPlot_GetColormapCount() c_int;
pub extern fn ImPlot_GetColormapName(cmap: ImPlotColormap) [*c]const u8;
pub extern fn ImPlot_GetColormapIndex(name: [*c]const u8) ImPlotColormap;
pub extern fn ImPlot_PushColormap_PlotColormap(cmap: ImPlotColormap) void;
pub extern fn ImPlot_PushColormap_Str(name: [*c]const u8) void;
pub extern fn ImPlot_PopColormap(count: c_int) void;
pub extern fn ImPlot_NextColormapColor(pOut: [*c]imgui.ImVec4) void;
pub extern fn ImPlot_GetColormapSize(cmap: ImPlotColormap) c_int;
pub extern fn ImPlot_GetColormapColor(pOut: [*c]imgui.ImVec4, idx: c_int, cmap: ImPlotColormap) void;
pub extern fn ImPlot_SampleColormap(pOut: [*c]imgui.ImVec4, t: f32, cmap: ImPlotColormap) void;
pub extern fn ImPlot_ColormapScale(label: [*c]const u8, scale_min: f64, scale_max: f64, size: imgui.ImVec2, cmap: ImPlotColormap, fmt: [*c]const u8) void;
pub extern fn ImPlot_ColormapSlider(label: [*c]const u8, t: [*c]f32, out: [*c]imgui.ImVec4, format: [*c]const u8, cmap: ImPlotColormap) bool;
pub extern fn ImPlot_ColormapButton(label: [*c]const u8, size: imgui.ImVec2, cmap: ImPlotColormap) bool;
pub extern fn ImPlot_BustColorCache(plot_title_id: [*c]const u8) void;
pub extern fn ImPlot_ItemIcon_Vec4(col: imgui.ImVec4) void;
pub extern fn ImPlot_ItemIcon_U32(col: imgui.ImU32) void;
pub extern fn ImPlot_ColormapIcon(cmap: ImPlotColormap) void;
pub extern fn ImPlot_GetPlotDrawList() [*c]imgui.ImDrawList;
pub extern fn ImPlot_PushPlotClipRect(expand: f32) void;
pub extern fn ImPlot_PopPlotClipRect() void;
pub extern fn ImPlot_ShowStyleSelector(label: [*c]const u8) bool;
pub extern fn ImPlot_ShowColormapSelector(label: [*c]const u8) bool;
pub extern fn ImPlot_ShowStyleEditor(ref: [*c]ImPlotStyle) void;
pub extern fn ImPlot_ShowUserGuide() void;
pub extern fn ImPlot_ShowMetricsWindow(p_popen: [*c]bool) void;
pub extern fn ImPlot_ShowDemoWindow(p_open: [*c]bool) void;
pub extern fn ImPlot_ImLog10_Float(x: f32) f32;
pub extern fn ImPlot_ImLog10_double(x: f64) f64;
pub extern fn ImPlot_ImRemap_Float(x: f32, x0: f32, x1: f32, y0: f32, y1: f32) f32;
pub extern fn ImPlot_ImRemap_double(x: f64, x0: f64, x1: f64, y0: f64, y1: f64) f64;
pub extern fn ImPlot_ImRemap_S8(x: imgui.ImS8, x0: imgui.ImS8, x1: imgui.ImS8, y0: imgui.ImS8, y1: imgui.ImS8) imgui.ImS8;
pub extern fn ImPlot_ImRemap_U8(x: imgui.ImU8, x0: imgui.ImU8, x1: imgui.ImU8, y0: imgui.ImU8, y1: imgui.ImU8) imgui.ImU8;
pub extern fn ImPlot_ImRemap_S16(x: imgui.ImS16, x0: imgui.ImS16, x1: imgui.ImS16, y0: imgui.ImS16, y1: imgui.ImS16) imgui.ImS16;
pub extern fn ImPlot_ImRemap_U16(x: imgui.ImU16, x0: imgui.ImU16, x1: imgui.ImU16, y0: imgui.ImU16, y1: imgui.ImU16) imgui.ImU16;
pub extern fn ImPlot_ImRemap_S32(x: imgui.ImS32, x0: imgui.ImS32, x1: imgui.ImS32, y0: imgui.ImS32, y1: imgui.ImS32) imgui.ImS32;
